feat: add screens and navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Salud_App</string>
+    <string name="your_health_is_our_pleasure">Sức khỏe của bạn \n là niềm vui của chúng tôi!</string>
 </resources>
