firebase sign gg

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="report">Báo cáo</string>
     <string name="weight">Cân nặng</string>
     <string name="save">Lưu</string>
+    <string name="default_web_client_id">718456115746-j6lg9s4klp4m80vm2bc6d26prsg9ngfv.apps.googleusercontent.com</string>
 </resources>
