--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="nutrition">Dinh dưỡng</string>
     <string name="exercise">Luyện tập</string>
     <string name="sleep">Giấc ngủ</string>
-    <string name="report">Báo cáo</string>
+    <string name="goal">Mục tiêu</string>
     <string name="weight">Cân nặng</string>
     <string name="save">Lưu</string>
     <string name="default_web_client_id">718456115746-j6lg9s4klp4m80vm2bc6d26prsg9ngfv.apps.googleusercontent.com</string>
