đồng bộ giao diện

--- a/BaoCao_Salud.tex
+++ b/BaoCao_Salud.tex
@@ -566,6 +566,7 @@ Sử dụng Room để lưu trữ dữ liệu offline:
     \item \textbf{Home Screen}: Dashboard tổng quan
     \item \textbf{Data Screen}: Theo dõi dữ liệu sức khỏe
     \item \textbf{Diary Screen}: Nhật ký sức khỏe
+    \item \textbf{AI Assistant Screen}: Trợ lý AI sức khỏe
     \item \textbf{Profile Screen}: Quản lý hồ sơ cá nhân
 \end{enumerate}
 
